<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/newTourneyButton"
            app:layout_constraintEnd_toEndOf="@+id/newTourneyButton"
            app:layout_constraintStart_toStartOf="@+id/newTourneyButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blindsup_logo_one"
            android:contentDescription="@string/blinds_up_logo" />

        <Button
            android:id="@+id/newTourneyButton"
            style="@style/blind_button_style"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/start_a_new_tournament"
            app:layout_constraintBottom_toTopOf="@+id/savedTourneyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/savedTourneyButton"
            style="@style/blind_button_style"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/use_a_saved_tournament"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newTourneyButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>