<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blinds_up_logo"
            app:layout_constraintBottom_toTopOf="@id/logInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blindsup_logo_one" />


        <Button
            android:id="@+id/logInButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/capriola"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="@color/blinds_blue"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toTopOf="@+id/skipButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <Button
            android:id="@+id/skipButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/capriola"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="@color/blinds_blue"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>